# django_feriados

./: README.md  manage.py  pyproject.toml
core/: models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_feriadomodel_modificado_em.py
core/templates/: feriado.html  natal.html
feriados/: asgi.py  settings.py  urls.py  wsgi.py
