[tool.poetry]
name = "django_feriados"
version = "0.1.0"
description = ""
authors = ["Wilkne Maia <72803395+wilkneMaia@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
